finalize layout and squash click handler attachment bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ h1 {
   border-left: 4px solid white;
 }
 
+body {
+  font-family: 'Lato', sans-serif;
+}
+
 .container {
   margin-top: 10px;
 }
@@ -21,6 +25,10 @@ h1 {
   display: none;
 }
 
+.emphasis {
+  font-weight: bolder;
+}
+
 div.ordered-pizza div.panel-heading {
   padding-left: 10px;
 }
@@ -36,7 +44,8 @@ div.ordered-pizza div.panel-heading {
 }
 
 #order-price {
-  width: 12%;
+  width: 16%;
+  text-align: center;
   color: white;
   padding: 5px;
   border-radius: 5px;
@@ -53,4 +62,14 @@ div.ordered-pizza div.panel-heading {
   margin-left: 10px;
   border-radius: 10px 0px 0px 10px;
   border-left: 4px solid black;
+}
+
+h3#price {
+  margin-top: 5px;
+  text-align: center;
+  padding: 15px 15px;
+  display: inline-block;
+  color: white;
+  border-radius: 5px;
+  background-color: grey;
 }
